Cambie la fuente

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@ background-color:rgba(106, 182, 55, 0.521);
     display: inline;
     margin-left: 5%;
     padding: 3%;
+    font-family: 'Montserrat', sans-serif;
     
 }
 a{
