--- a/src/style.css
+++ b/src/style.css
@@ -9,10 +9,20 @@ background-color:rgba(106, 182, 55, 0.521);
     color: white;
     font-size: 100%;
     display: inline;
-    margin-left: 5%;
+    margin: 2%;
     padding: 3%;
     font-family: 'Montserrat', sans-serif;
-    
+        
+}
+.pokeBox{
+    width: 20%;
+    float: left;
+    box-sizing: border-box;
+    padding: 8px;
+
+}
+.img{
+    width: 80%; 
 }
 a{
     color: aliceblue;
