--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,24 @@
 *{
 text-align: center;}
-body{
+body{  
 
 background: rgb(23, 192, 119);
 opacity: 80%;
 
 }
-.color-main{
-    
-    background: rgba(16, 17, 16, 0.534);
-    color: white;
-    font-size: 100%;
-    display: inline;
-    
-    padding: 3%;
-    font-family: 'Montserrat', sans-serif;
-        
+
+.menu{
+    display: block;
+    padding-top:1.9%;
+}
+ .sub-menu{
+display: inline;
+margin-right: 3%;
+color: aliceblue;   
+font-size: 110%;
+
+
+
 }
 .pokeBox{
     width: 20%;
@@ -35,6 +38,63 @@ a{
     color: aliceblue;
     
 }
-h1{
-    margin-top: 5%;
+h3{
+    margin-bottom: 0.4%;
 }
+/* probando slide  */
+
+.slider {
+	width: 100%;
+	margin: auto;
+    overflow: hidden;
+    /* height: 200px; */
+
+    background-color: #1a1b1be0;
+    
+    
+}
+
+.slider ul {
+	display: flex;
+	padding: 0;
+	width: 400%;
+	
+	animation: cambio 10s infinite alternate linear;
+}
+
+.slider li {
+	width: 30%;
+	list-style: none;
+}
+
+.slider img {
+    width: 30%;
+    background-attachment: fixed; 
+  background-repeat: no-repeat;
+  background-position: center;
+  
+  background-size: cover;
+}
+
+@keyframes cambio {
+	0% {margin-left: 0;}
+	20% {margin-left: 0;}
+	
+	25% {margin-left: -100%;}
+	45% {margin-left: -100%;}
+	
+	50% {margin-left: -200%;}
+	70% {margin-left: -200%;}
+	
+	75% {margin-left: -300%;}
+	100% {margin-left: -300%;}
+}
+header{
+    background-image: url(image/slide-c.jpg);
+    /* background-attachment: fixed; 
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #1a1b1bf3; */
+    /* background-size: 60%; */
+}
+
