--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,83 @@
-*{
+html {
+    box-sizing: border-box;
+    font-family: sans-serif;
+    font-size: 16px;
+    height: 100%;
+   
+  }
+  
+  *,
+  *:after,
+  *:before { 
+   padding: 0;
+   margin: 0;
+   box-sizing: inherit;
+  }
+  
+  .grid {
+    min-height: 100%;
+    background-color: skyblue;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 10fr));
+    grid-gap: 1%;    
+    border-radius: 15px;   
+    padding: 2%;
+  }
+  .grid > * { 
+    padding:2%;
+    text-align: center;
+    background-color: steelblue;
+    
+  }
+  aside{
+    background: rgb(238, 188, 130);
+    width: 25%;
+    float: right;
+    height:30em; /*por borrar*/
+    margin-right: 3%;
+    padding: .5rem;
+    padding-left: .5rem;
+    
+}
+.space-left{
+    float: left;
+   }
+.size-cont{
+    width: 50rem;
+    overflow-block: hidden;
+    margin-left: 3%;
+    height:30em;   
+       }
+       article{
+        width: 100%;
+       }
+
+
+.scroll{
+    overflow:scroll; 
+    overflow-y:scroll;
+    overflow-x:hidden;
+}
+.style-mold{
+    border-radius: 15px;
+    background: #297e37;
+    }
+header{
+height: 20%;
+background: red
+}
+
+footer{
+    overflow: hidden;
+    height: 10px;
+    background: black;
+}
+
+
+
+
+
+/* *{
 text-align: center;}
 body{  
 text-align: center;
@@ -90,13 +169,13 @@ h3{
     margin-bottom: 0.4%;
 }
 /* probando slide  */
-
+/* 
 .slider {
 	width: 100%;
 	margin: auto;
     overflow: hidden;
     /* height: 200px; */
-
+/* 
     background-color: #1a1b1be0;
     
     
@@ -144,5 +223,4 @@ header{
     background-position: center;
     background-color: #1a1b1bf3; */
     /* background-size: 60%; */
-}
-
+/* } */
