--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,7 @@ body {
 }
 .color-font {
   background-color: rgba(255, 255, 255, 0.685);
-  border-radius: 15%;
+  border-radius: 15px;
   /* color: white; */
 }
 .cont-data {
@@ -32,7 +32,7 @@ body {
   /* Green 3 */
   border: 3px solid #6fcf97;
   box-sizing: border-box;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.616);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.363);
   border-radius: 10px;
 }
 *,
@@ -54,14 +54,14 @@ body {
   background: #81c7276b;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 10fr));
-  grid-gap: 1%;
+  grid-gap: 3%;
   border-radius: 15px;
   padding: 5%;
 }
 .grid > * {
   padding: 2%;
   text-align: center;
-  background-color: rgba(0, 0, 0, 0.733);
+  background-color: rgba(18, 22, 57, 0.7);
   border-radius: 15px;
 }
 aside {
@@ -114,7 +114,7 @@ footer {
 .style-btn {
   width: 70%;
   padding: 2%;
-  border-radius: 20%;
+  border-radius: 15px;
   font-size: 17px;
   margin: 10%;
   color: black;
