--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@ body {
   /* position: absolute;
   width: 100%;
   height: 100%; */
-  background: url(fondo.png);
+  background: url(image/fondo.png);
   background-position: no-repeat;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -30,7 +30,7 @@ body {
   top: calc(50% - 589px / 2 + 109.5px);
 
   /* Green 3 */
-  
+
   border: 3px solid #6fcf97;
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.616);
@@ -120,7 +120,7 @@ footer {
   margin: 10%;
   color: black;
 }
-.stata-style{
+.stata-style {
   width: 70%;
   padding: 2%;
   background-color: white;
