--- a/src/style.css
+++ b/src/style.css
@@ -5,9 +5,6 @@ html {
   height: 100%;
 }
 body {
-  /* position: absolute;
-  width: 100%;
-  height: 100%; */
   background: url(image/fondo.png);
   background-position: no-repeat;
   background-attachment: fixed;
@@ -20,7 +17,6 @@ body {
 .color-font {
   background-color: rgba(255, 255, 255, 0.685);
   border-radius: 15px;
-  /* color: white; */
 }
 .cont-data {
   position: absolute;
@@ -54,7 +50,7 @@ body {
   box-shadow: 0px 4px 4px rgba(202, 235, 17, 0.473);
   background: #81c7276b;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 10fr));
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   grid-gap: 3%;
   border-radius: 15px;
   padding: 5%;
@@ -119,160 +115,126 @@ footer {
   font-size: 17px;
   margin: 10%;
   color: black;
-}
-.stata-style {
-  width: 70%;
-  padding: 2%;
   background-color: white;
-  border-radius: 15px;
-  text-align: center;
-  margin: 10%;
 }
 
-/* *{
-text-align: center;}
-body{  
-text-align: center;
-font-family: 'Montserrat', sans-serif;
+/* media query*/
+
+@media screen and (max-width: 75em) {
+  .header {
+    background-color: red;
+  }
+  .size-cont {
+    width: 40rem;
+    height: 70rem;
+    overflow-block: hidden;
+    padding: 0.5rem;
+  }
 }
-
-body{
-background: rgb(23, 192, 119);
-display: inline;
-
-}
-
-.cont-main{
-    width: 70%;
-}
-
-.menu{
-    display: block;
-    padding-top:1.9%;
-}
- .sub-menu{
-display: inline;
-margin-right: 3%;
-color: aliceblue;   
-font-size: 110%;
-
-
-
-}
-.li-item{
-    background: rgba(18, 137, 216, 0.534);
-    display: inline;
-    color: white;
-    border:5%;
-    padding: 30px;
-    box-sizing: border-box;
-    font-size: 200%;
-}
-.pokeview{
-    width: 70%;
-
-}
-.pokeBox{
-    width: 20%;
-    float: left;
-    border-radius: 20px;
-    box-sizing: border-box;
-    background:rgb(50, 218, 178)  ;
-    padding: 8px;
-
-}
-
-
-aside{
-    width: 30%;
-    background: rgb(50, 218, 178);
+@media screen and (max-width: 64em) {
+  .header {
+    background-color: blue;
+  }
+  .head {
+    width: 50%;
+  }
+  .size-cont {
+    width: 20rem;
+    height: 70rem;
+    overflow-block: hidden;
+    padding: 0.5rem;
+  }
+  aside {
+    margin-top: 3%;
+    font-size: 20px;
+    width: 25rem;
+    height: 50rem;
     float: right;
-    border-radius: 10px;
+    padding-left: 3rem;
+  }
+  .style-btn {
+    font-size: 30px;
+  }
+}
+@media screen and (max-width: 37.5em) {
+  .header {
+    background-color: green;
+  }
+  .size-cont {
+    margin-top: 5%;
+    width: 20rem;
+    height: 25rem;
+    margin-left: 1%;
+  }
+  aside {
+    padding-left: 0.5rem;
+    margin-top: 10%;
+    font-size: 15px;
+    width: 10rem;
+    height: 25rem;
+  }
+  .style-btn {
+    width: 86%;
+    font-size: 13px;
+  }
 }
 
+@media screen and (max-width: 30em) {
+  .header {
+    background-color: rgba(179, 114, 163);
+  }
+  .head {
+    width: 100%;
+  }
+  .size-cont {
+    margin-top: 10%;
+    width: 10rem;
+    height: 31rem;
+    overflow-block: hidden;
+    padding: 0.5rem;
+  }
+  aside {
+    padding-left: 0.5rem;
+    margin-top: 15%;
+    font-size: 10px;
+    width: 10rem;
+    height: 31rem;
+  }
+  .style-btn {
+    width: 100%;
+    font-size: 10px;
+  }
+}
 
-
-.types_items{
-   
-    border-radius: 20px;
-    margin: 2%;
-    padding: 10px;
+@media screen and (max-width: 20em) {
+  .header {
+    background-color: brown;
+  }
+  .size-cont {
+    margin-top: 3%;
+    width: 10rem;
+    height: 20rem;
+  }
+  aside {
+    margin-top: 3%;
+    font-size: 10px;
+    width: 7rem;
+    height: 20rem;
+    float: right;
+  }
+  .style-btn {
+    width: 100%;
+    float: left;
+    font-size: 10px;
+  }
+  /* aside {
+    background: #6fcf7783;
+    box-shadow: 0px 4px 4px rgba(202, 235, 17, 0.473);
+    width: 25%;
+    float: right;
     
-    display:  block;
-    box-sizing: border-box;
-    font-family:  black, Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
-;    
+    margin-right: 3%;
+    padding: 0.5rem;
+    padding-left: 0.5rem;
+  } */
 }
-
-.img{
-    width: 80%; 
-    background: white;
-   border-radius: 50%;
-}
-
-h1{
-    
-    background:#E8B319 opacity 30%;
-    width: 85%;
-    
-    padding: 5%;
-}
-h3{
-    margin-bottom: 0.4%;
-}
-/* probando slide  */
-/* 
-.slider {
-	width: 100%;
-	margin: auto;
-    overflow: hidden;
-    /* height: 200px; */
-/* 
-    background-color: #1a1b1be0;
-    
-    
-}
-
-.slider ul {
-	display: flex;
-	padding: 0;
-	width: 400%;
-	
-	animation: cambio 10s infinite alternate linear;
-}
-
-.slider li {
-	width: 30%;
-	list-style: none;
-}
-
-.slider img {
-    width: 30%;
-    background-attachment: fixed; 
-  background-repeat: no-repeat;
-  background-position: center;
-  
-  background-size: cover;
-}
-
-@keyframes cambio {
-	0% {margin-left: 0;}
-	20% {margin-left: 0;}
-	
-	25% {margin-left: -100%;}
-	45% {margin-left: -100%;}
-	
-	50% {margin-left: -200%;}
-	70% {margin-left: -200%;}
-	
-	75% {margin-left: -300%;}
-	100% {margin-left: -300%;}
-}
-header{
-    background-image: url(image/slide-c.jpg);
-    /* background-attachment: fixed; 
-    background-repeat: no-repeat;
-    background-position: center;
-    background-color: #1a1b1bf3; */
-/* background-size: 60%; */
-/* } */
