header con mismo estilo

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,9 @@ html {
   font-size: 16px;
   height: 100%;
 }
+.head {
+  width: 50%;
+}
 body {
   background: url(image/fondo.png);
   background-position: no-repeat;
@@ -13,6 +16,7 @@ body {
   background-color: #1a1b1bf3;
   background-size: cover;
   border-image-width: 50%;
+  font-size:16px;
 }
 .color-font {
   background-color: rgba(255, 255, 255, 0.685);
@@ -69,6 +73,7 @@ aside {
   height: 30em; /*por borrar*/
   margin-right: 3%;
   padding: 0.5rem;
+  border-radius: 15px;
   padding-left: 0.5rem;
 }
 .space-left {
@@ -97,7 +102,7 @@ article {
 footer {
   overflow: hidden;
   height: 10px;
-  /* background: black; */
+ 
 }
 .col-xs-12 {
   width: 100%;
@@ -112,7 +117,7 @@ footer {
   width: 70%;
   padding: 2%;
   border-radius: 15px;
-  font-size: 17px;
+  font-size: 16px;
   margin: 10%;
   color: black;
   background-color: white;
@@ -121,57 +126,91 @@ footer {
 /* media query*/
 
 @media screen and (max-width: 75em) {
-  .header {
+  /* .header {
     background-color: red;
+  } */
+  .head {
+    width: 50%;
   }
   .size-cont {
+    
     width: 40rem;
-    height: 70rem;
+    height: 32rem;
     overflow-block: hidden;
     padding: 0.5rem;
   }
+  aside {
+    margin-top: 1%;
+     font-size: 13px; 
+    width: 15rem;
+    height: 32rem;
+    
+    border-radius: 15px;
+    float: auto;
+    padding: 0.5rem;
+   
+  }
+  .style-btn {
+     font-size: 13px;
+    width: 80%;
+    height: 3%;
+    
+  }
 }
-@media screen and (max-width: 64em) {
-  .header {
+@media screen and (max-width: 60rem) {
+  /* .header {
     background-color: blue;
+  } */
+  .head {
+    width: 50%;
+  }
+  .size-cont {
+    width: 25rem;
+    margin-top: 3%;
+    height: 27rem;
+    overflow-block: hidden;
+    padding: 0.5rem;
+    border-radius: 15px;
+  }
+  aside {
+    margin-top: 5%;
+     font-size: 13px; 
+    width: 15rem;
+    height: 27rem;
+    border-radius: 15px;
+    float: auto;
+    padding: 0.5rem;
+   
+  }
+  .style-btn {
+     font-size: 13px;
+    width: 80%;
+    height: 3%;
+    
+  }
+}
+@media screen and (max-width: 42em) {
+  .header {
+    /* background-color: green; */
+     width: 100%;
+    height: auto;
   }
   .head {
     width: 50%;
   }
   .size-cont {
-    width: 20rem;
-    height: 70rem;
-    overflow-block: hidden;
-    padding: 0.5rem;
-  }
-  aside {
-    margin-top: 3%;
-    font-size: 20px;
-    width: 25rem;
-    height: 50rem;
-    float: right;
-    padding-left: 3rem;
-  }
-  .style-btn {
-    font-size: 30px;
-  }
-}
-@media screen and (max-width: 37.5em) {
-  .header {
-    background-color: green;
-  }
-  .size-cont {
     margin-top: 5%;
-    width: 20rem;
-    height: 25rem;
+    width: 21rem;
+    height: 31rem;
     margin-left: 1%;
   }
   aside {
     padding-left: 0.5rem;
     margin-top: 10%;
-    font-size: 15px;
+     font-size: 13px; 
+    border-radius: 15px;
     width: 10rem;
-    height: 25rem;
+    height: 31rem;
   }
   .style-btn {
     width: 86%;
@@ -180,61 +219,57 @@ footer {
 }
 
 @media screen and (max-width: 30em) {
-  .header {
+  /* .header {
     background-color: rgba(179, 114, 163);
-  }
+  } */
   .head {
-    width: 100%;
+    width: 90%;
   }
   .size-cont {
-    margin-top: 10%;
-    width: 10rem;
-    height: 31rem;
+    margin-top: 5%;
+    width: 13rem;
+     height: 31rem; 
     overflow-block: hidden;
     padding: 0.5rem;
   }
   aside {
-    padding-left: 0.5rem;
-    margin-top: 15%;
-    font-size: 10px;
-    width: 10rem;
+    padding: 0.5rem;
+    margin-top: 5%;
+     font-size: 10px; 
+    width: 8rem;
+    border-radius: 15px;
     height: 31rem;
   }
   .style-btn {
-    width: 100%;
-    font-size: 10px;
+    width: 80%;
+     font-size: 10px;
+    float: center;
   }
 }
 
-@media screen and (max-width: 20em) {
-  .header {
+@media screen and (max-width: 22em) {
+  /* .header {
     background-color: brown;
-  }
+  } */
   .size-cont {
     margin-top: 3%;
     width: 10rem;
     height: 20rem;
   }
   aside {
-    margin-top: 3%;
-    font-size: 10px;
-    width: 7rem;
+    margin-top: 10%;
+    padding: 10px;
+  font-size: 10px;
+    width: 10rem;
     height: 20rem;
-    float: right;
+    border-radius: 15px;
+    float: center;
   }
   .style-btn {
-    width: 100%;
-    float: left;
+    width: 90%;
+    float: center;
     font-size: 10px;
+   
   }
-  /* aside {
-    background: #6fcf7783;
-    box-shadow: 0px 4px 4px rgba(202, 235, 17, 0.473);
-    width: 25%;
-    float: right;
-    
-    margin-right: 3%;
-    padding: 0.5rem;
-    padding-left: 0.5rem;
-  } */
+ 
 }
